--- a/laravel-app/composer.json
+++ b/laravel-app/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-pdo": "*",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "ext-pdo": "*"
+        "ext-http": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
